.nx/cache/terminalOutputs/279424732265045071
[0m[2m[35m$[0m [2m[1mbun run build:clean && bun run build.js[0m
[0m[2m[35m$[0m [2m[1mrimraf dist[0m
📦 Generating .d.ts from .js + JSDoc...
[0m[31m❌ Failed to generate types: [0m[1m587 |[0m [0m[35mfunction[0m toPathIfFileURL(fileURLOrPath) {
[0m[1m588 |[0m   [0m[35mif[0m (!isURLInstance(fileURLOrPath))
[0m[1m589 |[0m     [0m[35mreturn[0m fileURLOrPath[0m[2m;[0m
[0m[1m590 |[0m   [0m[35mreturn[0m Bun[0m[3m[1m.fileURLToPath[0m(fileURLOrPath)[0m[2m;[0m
[0m[1m591 |[0m }
[0m[1m592 |[0m   [0m[35mconst[0m err = [0m[35mnew[0m [0m[1mError[0m(message)[0m[2m;[0m
                    [31m[1m^[0m
[0m[31merror[0m[2m:[0m [1mCommand failed: tsc -p tsconfig.build.json[0m
   code[0m[2m:[0m [0m[33m2[0m[0m[2m,[0m
 killed[0m[2m:[0m [0m[33mfalse[0m[0m[2m,[0m
 signal[0m[2m:[0m [0m[33mnull[0m[0m[2m,[0m
    cmd[0m[2m:[0m [0m[32m"tsc -p tsconfig.build.json"[0m[0m[2m,[0m
 stdout[0m[2m:[0m [0m[32m"src/eslint.js(5,7): error TS2559: Type 'Config<RulesRecord>[]' has no properties in common with type 'Config<RulesRecord>'.\r\n"[0m[0m[2m,[0m
 stderr[0m[2m:[0m ""[0m[2m,[0m

[0m      [2mat [0m[0m[1m[3mgenericNodeError[0m[2m ([0m[0m[36mnode:child_process[0m[2m:[0m[33m592[0m[2m:[33m15[0m[2m)[0m
[0m      [2mat [0m[0m[1m[3mexitHandler[0m[2m ([0m[0m[36mnode:child_process[0m[2m:[0m[33m95[0m[2m:[33m28[0m[2m)[0m
[0m      [2mat [0m[0m[1m[3memit[0m[2m ([0m[0m[36mnode:events[0m[2m:[0m[33m330[0m[2m:[33m22[0m[2m)[0m
[0m      [2mat [0m[0m[1m[3m#maybeClose[0m[2m ([0m[0m[36mnode:child_process[0m[2m:[0m[33m905[0m[2m:[33m16[0m[2m)[0m
[0m      [2mat [0m[0m[1m[3m#handleOnExit[0m[2m ([0m[0m[36mnode:child_process[0m[2m:[0m[33m683[0m[2m:[33m72[0m[2m)[0m
[0m
[0m[1m587 |[0m [0m[35mfunction[0m toPathIfFileURL(fileURLOrPath) {
[0m[1m588 |[0m   [0m[35mif[0m (!isURLInstance(fileURLOrPath))
[0m[1m589 |[0m     [0m[35mreturn[0m fileURLOrPath[0m[2m;[0m
[0m[1m590 |[0m   [0m[35mreturn[0m Bun[0m[3m[1m.fileURLToPath[0m(fileURLOrPath)[0m[2m;[0m
[0m[1m591 |[0m }
[0m[1m592 |[0m   [0m[35mconst[0m err = [0m[35mnew[0m [0m[1mError[0m(message)[0m[2m;[0m
                    [31m[1m^[0m
[0m[31merror[0m[2m:[0m [1mCommand failed: tsc -p tsconfig.build.json[0m
   code[0m[2m:[0m [0m[33m2[0m[0m[2m,[0m
 killed[0m[2m:[0m [0m[33mfalse[0m[0m[2m,[0m
 signal[0m[2m:[0m [0m[33mnull[0m[0m[2m,[0m
    cmd[0m[2m:[0m [0m[32m"tsc -p tsconfig.build.json"[0m[0m[2m,[0m
 stdout[0m[2m:[0m [0m[32m"src/eslint.js(5,7): error TS2559: Type 'Config<RulesRecord>[]' has no properties in common with type 'Config<RulesRecord>'.\r\n"[0m[0m[2m,[0m
 stderr[0m[2m:[0m ""[0m[2m,[0m

[0m      [2mat [0m[0m[1m[3mgenericNodeError[0m[2m ([0m[0m[36mnode:child_process[0m[2m:[0m[33m592[0m[2m:[33m15[0m[2m)[0m
[0m      [2mat [0m[0m[1m[3mexitHandler[0m[2m ([0m[0m[36mnode:child_process[0m[2m:[0m[33m95[0m[2m:[33m28[0m[2m)[0m
[0m      [2mat [0m[0m[1m[3memit[0m[2m ([0m[0m[36mnode:events[0m[2m:[0m[33m330[0m[2m:[33m22[0m[2m)[0m
[0m      [2mat [0m[0m[1m[3m#maybeClose[0m[2m ([0m[0m[36mnode:child_process[0m[2m:[0m[33m905[0m[2m:[33m16[0m[2m)[0m
[0m      [2mat [0m[0m[1m[3m#handleOnExit[0m[2m ([0m[0m[36mnode:child_process[0m[2m:[0m[33m683[0m[2m:[33m72[0m[2m)[0m
[0m
[2mBun v1.2.10 (Windows x64)[0m
[0m[31merror[0m[2m:[0m script [1m"build"[0m exited with code 1[0m
